--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -42,6 +42,7 @@
     gap: 40px;
     padding: 20px 0;
     margin-right: 20px;
+    position: relative;
 }
 
 .task-container, .priority-container {
@@ -75,7 +76,7 @@ select {
 }
 
 .txt-img {
-    border: 1px solid #D1D1D1;
+    border: 2px solid #D1D1D1;
     border-radius: 10px;
     padding: 16px 10px;
     background-color: white;
@@ -94,6 +95,10 @@ select {
     background-repeat: no-repeat;
 }
 
+#category_dropdown {
+    position: relative;
+}
+
 .category-list {
     background-color: white;
     border: 1px solid #D1D1D1;
@@ -104,6 +109,20 @@ select {
     left: 0;
     width: 100%;
     z-index: 10;
+    transform-origin: top;
+    transform: scaleY(0);
+    opacity: 0;
+    pointer-events: none;
+    transition: transform 125ms ease, opacity 125ms ease;
+    margin-top: 2px;
+}
+
+.category-list.open {
+    max-height: 220px;
+    opacity: 1;
+    transform: scaleY(1);
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .category-list ul {
@@ -132,11 +151,18 @@ select {
 
 .bottom-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: 100%;
     font-size: 20px;
-    margin-top: 110px;
+    /* margin-top: 110px; */
     margin-right: 20px;
+    position: fixed;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid red;
+    max-width: 1440px;
+    /* I have to continue from here */
 }
 
 .bottom-container p {
